gcc/testsuite/g++.dg/cpp1y/pr58637.C
// PR c++/58637
// { dg-do compile }
// { dg-options "-std=gnu++1y" }

template<> void foo(auto); // { dg-error "auto|not a template" }
